Add membar to recents options [2/2]
Change-Id: I31704d3ce1d0e08cb89bbfc945d7773393c491e8
Signed-off-by: Shubham Singh <coolsks94@gmail.com>

--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -199,7 +199,11 @@
     <string name="recents_clear_all_location_top_center">Top center</string>
     <string name="recents_clear_all_location_bottom_right">Bottom right</string>
     <string name="recents_clear_all_location_bottom_left">Bottom left</string>
-    <string name="recents_clear_all_location_bottom_center">Bottom center</string>
+    <string name="recents_clear_all_location_bottom_center">Bottom center</string>   
+    
+    <!-- Recents feature, Membar -->
+    <string name="recents_show_membar_title">Memory bar</string>
+    <string name="recents_show_membar_summary">Show a bar with the device\'s available memory</string>
 
     <!-- Hide Lockscreen clock, date, & alarm -->
     <string name="lockscreen_items_other">Other</string>
