--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -744,4 +744,8 @@
     <string name="wallpaper_tint_notification_shade">Notification shade tint</string>
     <string name="wallpaper_tint_summary">Apply a tint to the background based on the homescreen wallpaper</string>
 
+    <!-- Face unlock -->
+    <string name="face_auto_unlock_title">Face auto unlock</string>
+    <string name="face_auto_unlock_summary">Dismiss lockscreen after face unlocking</string>
+
 </resources>
