--- a/res/values-af/strings.xml
+++ b/res/values-af/strings.xml
@@ -653,4 +653,9 @@
   <string name="chooser_activity_blacklist_cat_title">Blacklist</string>
   <string name="chooser_activity_blacklist_pref_title">Add app</string>
   <string name="chooser_activity_blacklist_pref_summary">Tap here to add, tap on added app to remove it</string>
+
+  <!-- System default animation -->
+  <string name="system_default_animation_title">Android P animation style</string>
+  <string name="system_default_animation_summary">Enable Android P \"Default\" animations</string>
+
 </resources>
