--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -647,6 +647,7 @@
     <string name="battery_style_circle">Circle</string>
     <string name="battery_style_dotted_circle">Dotted circle</string>
     <string name="battery_style_square">Square</string>
+    <string name="battery_style_dotted_square">Dotted square</string>
     <string name="battery_style_text">Text</string>
     <string name="battery_style_hidden">Hidden</string>
 
