--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -772,4 +772,26 @@
     <string name="sensor_block_title">Sensor block per-package</string>
     <string name="sensor_block_summary">Block access to certain sensors for some apps to save battery.</string>
 
+    <!-- Lock Clock Fonts -->
+    <string name="lock_clock_font_title">Clock font options</string>
+    <string name="lock_clock_font_summary">Change the default font of the lockscreen clock widget</string>
+    <string name="lock_clock_font_dialog_title">Select lock clock font</string>
+    <string name="lock_clock_font_stock">System Normal (default)</string>
+    <string name="lock_clock_font_bold">System Bold</string>
+    <string name="lock_clock_font_italic">System Italic</string>
+    <string name="lock_clock_font_bold_italic">System Bold Italic</string>
+    <string name="lock_clock_font_light_italic">System Light Italic</string>
+    <string name="lock_clock_font_thin_italic">System Thin Italic</string>
+    <string name="lock_clock_font_condensed_normal">System Condensed</string>
+    <string name="lock_clock_font_condensed_italic">System Condensed Italic</string>
+    <string name="lock_clock_font_condensed_bold">System Condensed Bold</string>
+    <string name="lock_clock_font_condensed_bold_italic">System Condensed Bold Italic</string>
+    <string name="lock_clock_font_medium_normal">System Medium</string>
+    <string name="lock_clock_font_medium_italic">System Medium Italic</string>
+    <string name="lock_clock_font_gobold">GoBold Light</string>
+    <string name="lock_clock_font_roadrage">Road Rage</string>
+    <string name="lock_clock_font_snowstorm">Snowstorm</string>
+    <string name="lock_clock_font_googlesans">Google Sans</string>
+    <string name="lock_clock_font_themeable">Themeable (or VCR OSD Mono)</string>
+
 </resources>
